# Open-Integration-Platform

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  conftest.py  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  ruff.toml  setup.sh
.cursor/rules/: pre-commit-checks.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  (+1 more)
ci/: .gitlab-ci.yml
deploy/: deploy-allegro-workflow.sh  nginx.conf
docs/: ARCHITECTURE.md  CONNECTOR-DEVELOPMENT.md  CONNECTORS.md  ROADMAP.md  STANDARDS.md  TOS_INTERMODAL_EDI_SPEC.md
examples/: create_custom_connector.md  embed_in_angular.md  quickstart.py
integrators/ecommerce/allegro/v1.0.0/: .env.example  Dockerfile  connector.yaml  docker-compose.yml  pyproject.toml  requirements.txt
integrators/ecommerce/allegro/v1.0.0/config/: accounts.yaml
integrators/ecommerce/allegro/v1.0.0/src/: config.py  main.py  validators.py
integrators/ecommerce/allegro/v1.0.0/src/allegro/: auth.py  client.py  integration.py  mapper.py  schemas.py  scraper.py
integrators/ecommerce/allegro/v1.0.0/src/api/: dependencies.py  routes.py
integrators/ecommerce/allegro/v1.0.0/src/models/: database.py
integrators/ecommerce/allegro/v1.0.0/src/services/: account_manager.py
integrators/ecommerce/allegro/v1.0.0/tests/: conftest.py  test_api.py  test_auth.py  test_mapper.py
integrators/other/email-client/v1.0.0/: .dockerignore  .env.example  Dockerfile  connector.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
integrators/other/email-client/v1.0.0/config/: accounts.yaml
integrators/other/email-client/v1.0.0/src/: config.py  main.py
integrators/other/email-client/v1.0.0/src/api/: dependencies.py  routes.py
integrators/other/email-client/v1.0.0/src/email_client/: imap_client.py  integration.py  metrics.py  poller.py  schemas.py  smtp_client.py
integrators/other/email-client/v1.0.0/src/models/: database.py
integrators/other/email-client/v1.0.0/src/services/: account_manager.py
integrators/other/email-client/v1.0.0/tests/: conftest.py  test_account_manager.py  test_api.py  test_imap_parser.py  test_smtp_client.py
integrators/other/ksef/v1.0.0/: .env.example  Dockerfile  connector.yaml  docker-compose.yml  pyproject.toml  requirements.txt
integrators/other/ksef/v1.0.0/config/: accounts.yaml.example
integrators/other/ksef/v1.0.0/src/: config.py  main.py
integrators/other/ksef/v1.0.0/src/api/: dependencies.py  routes.py
integrators/other/ksef/v1.0.0/src/ksef/: auth.py  client.py  crypto.py  pdf_renderer.py  schemas.py  test_data_generator.py  xml_builder.py
integrators/other/ksef/v1.0.0/src/services/: account_manager.py
integrators/other/ksef/v1.0.0/tests/: test_api.py  test_auth.py  test_client.py  test_crypto.py  test_xml_builder.py
integrators/other/s3/v1.0.0/: .env.example  Dockerfile  connector.yaml  docker-compose.yml  pyproject.toml  requirements.txt
integrators/other/s3/v1.0.0/config/: accounts.yaml
integrators/other/s3/v1.0.0/src/: config.py  main.py
integrators/other/s3/v1.0.0/src/api/: dependencies.py  routes.py
integrators/other/s3/v1.0.0/src/models/: database.py
integrators/other/s3/v1.0.0/src/s3_client/: client.py  integration.py  poller.py  schemas.py  validators.py
integrators/other/s3/v1.0.0/src/services/: account_manager.py
integrators/other/s3/v1.0.0/tests/: conftest.py  test_account_manager.py  test_config.py  test_routes.py  test_schemas.py  test_validators.py
integrators/other/slack/v1.0.0/: .env.example  Dockerfile  connector.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
integrators/other/slack/v1.0.0/config/: accounts.yaml
integrators/other/slack/v1.0.0/src/: config.py  main.py
integrators/other/slack/v1.0.0/src/api/: dependencies.py  routes.py
integrators/other/slack/v1.0.0/src/models/: database.py
integrators/other/slack/v1.0.0/src/services/: account_manager.py
integrators/other/slack/v1.0.0/src/slack_client/: client.py  integration.py  poller.py  schemas.py
integrators/other/slack/v1.0.0/tests/: conftest.py  test_api.py  test_client.py
pinquark_connector_sdk/: __init__.py  legacy.py  testing.py
platform/: .env.example  Dockerfile  alembic.ini  config.py  docker-compose.yml  entrypoint.sh  requirements.txt
sdk/python/: pyproject.toml
sdk/python/pinquark_connector_sdk/: README.md  __init__.py  accounts.py  app.py  auth.py  decorators.py  health.py  http.py  legacy.py  metrics.py  pyproject.toml  testing.py
sdk/python/pinquark_sdk/: __init__.py  client.py  models.py
sdk/python/tests/: test_legacy_bridge.py  test_migration_parity.py  test_sdk_contract.py
shared/python/: pyproject.toml
shared/python/pinquark_common/: __init__.py
shared/python/pinquark_common/clients/: rest.py  soap.py
shared/python/pinquark_common/interfaces/: __init__.py  connector.py  courier.py  ecommerce.py
shared/python/pinquark_common/kafka/: __init__.py  consumer.py  envelope.py  producer.py
shared/python/pinquark_common/logging/: __init__.py  logger.py
shared/python/pinquark_common/mapping/: __init__.py  base.py  config.py  registry.py  status_mapper.py  status_mapping.json
shared/python/pinquark_common/mapping/profiles/examples/: allegro_order_client_acme.yaml  allegro_order_default.yaml  wapro_article_default.yaml
shared/python/pinquark_common/monitoring/: __init__.py  health.py  metrics.py
shared/python/pinquark_common/resilience/: __init__.py  circuit_breaker.py
shared/python/pinquark_common/schemas/: __init__.py  common.py  courier.py  ecommerce.py
shared/python/pinquark_common/schemas/wms/: __init__.py  address.py  article.py  attribute.py  commands.py  contact.py  contractor.py  document.py  error_log.py  feedback.py  position.py
shared/python/pinquark_common/security/: __init__.py  encryption.py
shared/python/tests/: test_base_mapper.py
(+1002 files in other folders)
