[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinquark-common"
version = "0.1.0"
description = "Shared library for Open Integration Platform by Pinquark.com"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Meritus S.A.", email = "integrations@pinquark.com"}]
dependencies = [
    "pydantic>=2.5",
    "cryptography>=42.0",
    "aiokafka>=0.10",
    "prometheus-client>=0.20",
    "lz4>=4.3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["pinquark_common*"]
