[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinquark-common"
version = "0.1.0"
description = "Shared library for Open Integration Platform by Pinquark.com"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Meritus S.A.", email = "integrations@pinquark.com"}]
dependencies = [
    "pydantic>=2.5,<3.0",
    "cryptography>=42.0,<45.0",
    "aiokafka>=0.10,<1.0",
    "prometheus-client>=0.20,<1.0",
    "lz4>=4.3,<5.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
include = ["pinquark_common*"]
