[project]
name = "pinquark-connector-sdk"
version = "0.1.0"
description = "SDK for building connectors for Open Integration Platform"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Pinquark", email = "integrations@pinquark.com"},
]
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
